# CODECRAFT_WD_03

./: .gitignore  pyproject.toml
authapp/: authentication.py  models.py  serializers.py  urls.py  views.py
authapp/migrations/: 0001_initial.py  0002_customuser_role_alter_customuser_is_superuser.py
backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Hero.jsx  Latest.jsx  Navbar.jsx  ProductItem.jsx  Title.jsx
frontend/src/context/: ShopContext.jsx
frontend/src/pages/: Home.jsx
storefront/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
storefront/migrations/: 0001_initial.py  0002_remove_category_slug.py  0003_reveiw.py  0004_reveiw_user.py  0005_remove_order_delivered_order_status.py  0006_remove_order_address_remove_order_full_name_and_more.py  0007_alter_cart_user.py
